--- a/nav/Cfeminista.html
+++ b/nav/Cfeminista.html
@@ -56,7 +56,7 @@
             </div>
 
             <div class="col-lg-6">
-                <img id="title-img" src="/home/lenny/Proyecto Historia 2 de marzo/images/discurso.png" alt="mujer-discurso">
+                <img id="title-img" src="/home/lenny/Proyecto Historia 2 de marzo/index.html" alt="mujer-discurso">
             </div>
 
         </div>
