--- a/nav/vp.html
+++ b/nav/vp.html
@@ -40,7 +40,7 @@
 
         <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/home/lenny/Proyecto Historia 2 de marzo/MRM.html">Home</a>
+                <a class="nav-link" href="/home/lenny/Proyecto Historia 2 de marzo/index.html">Home</a>
             </li>
         </ul>
     </div>
