--- a/Cfeminista.html
+++ b/Cfeminista.html
@@ -21,7 +21,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="designvp.css">
+    <link rel="stylesheet" href="nav/designvp.css">
 </head>
 
 <body>
@@ -32,14 +32,14 @@
     <a class="navbar-brand" href="">Adelita</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <i class="fa-solid fa-bars" style="color: #7b2ba0; font-size: 2em;"></i>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
         <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/home/lenny/Proyecto Historia 2 de marzo/MRM.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
             </li>
         </ul>
     </div>
@@ -56,7 +56,7 @@
             </div>
 
             <div class="col-lg-6">
-                <img id="title-img" src="/home/lenny/Proyecto Historia 2 de marzo/index.html" alt="mujer-discurso">
+                <img id="title-img" src="images/discurso.png" alt="mujer-discurso">
             </div>
 
         </div>
@@ -116,19 +116,19 @@
 
                 <div class="row justify-content-center">
                     <div class="polaroid col-lg-4">
-                        <img class="image-row" src="/home/lenny/Proyecto Historia 2 de marzo/images/Yucátan.jpeg"
+                        <img class="image-row" src="images/Yucátan.jpeg"
                             alt="Yúcatan">
                         <h3>Yucátan</h3>
                     </div>
 
                     <div class="polaroid col-lg-4">
-                        <img class="image-row" src="/home/lenny/Proyecto Historia 2 de marzo/images/Tabasco.jpeg"
+                        <img class="image-row" src="images/Tabasco.jpeg"
                             alt="Tabasco">
                         <h3>Tabasco</h3>
                     </div>
 
                     <div class="polaroid col-lg-4">
-                        <img class="image-row" src="/home/lenny/Proyecto Historia 2 de marzo/images/argentina.jpeg"
+                        <img class="image-row" src="images/argentina.jpeg"
                             alt="Argentina">
                         <h3>Argentina</h3>
                     </div>
@@ -219,7 +219,7 @@
                 <h2>CULTURA Y SOCIAL</h2>
             </div>
             <div class="container center col-lg-6">
-                <img class="last-img" src="/home/lenny/Proyecto Historia 2 de marzo/images/educacion-sexual.png" alt="sexualidad">
+                <img class="last-img" src="images/educacion-sexual.png" alt="sexualidad">
             </div>
             <div class="container col-lg-6">
                 <p class="cHI">En ese tiempo un tema tabú era la sexualidad de la mujer, la cual, Hermila 
@@ -237,11 +237,11 @@
     <footer id="footer">
         <section id="press">
             <div>
-                <img class="press-logo" src="/home/lenny/Proyecto Historia 2 de marzo/images/instagram.png"
+                <img class="press-logo" src="images/instagram.png"
                     alt="instagram">
-                <img class="press-logo" src="/home/lenny/Proyecto Historia 2 de marzo/images/facebook.png"
+                <img class="press-logo" src="images/facebook.png"
                     alt="facebook">
-                <img class="press-logo" src="/home/lenny/Proyecto Historia 2 de marzo/images/unam.png" alt="UNAM">
+                <img class="press-logo" src="images/unam.png" alt="UNAM">
                 <p id="copyright">© Copyright Adelita</p>
             </div>
         </section>
