--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
         <a class="navbar-brand" href="">Adelita</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <i class="fa-solid fa-bars" style="color: #7b2ba0; font-size: 2em;"></i>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="nav/vp.html">Visión Panorámica</a>
+              <a class="nav-link" href="vp.html">Visión Panorámica</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/home/lenny/Proyecto Historia 2 de marzo/nav/oficios.html">Oficios</a>
+              <a class="nav-link" href="oficios.html">Oficios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/home/lenny/Proyecto Historia 2 de marzo/nav/Cfeminista.html">Congreso
+              <a class="nav-link" href="Cfeminista.html">Congreso
                 Feminista</a>
             </li>
             <li class="nav-item">
@@ -63,7 +63,7 @@
       <div class="row">
 
         <div class="col-lg-6">
-          <h1>La Mujer en la Revolución Mexicana.</h1>
+          <h1 class="text-start">LA MUJER EN LA REVOLUCIÓN MEXICANA</h1>
         </div>
 
         <div class="col-lg-6">
@@ -244,8 +244,8 @@
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button id="button1" class="carousel-control-next" type="button"
-        data-bs-target="#testimonial-carousel" data-bs-slide="next">
+      <button id="button1" class="carousel-control-next" type="button" data-bs-target="#testimonial-carousel"
+        data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
