--- a/oficios.html
+++ b/oficios.html
@@ -21,7 +21,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="designvp.css">
+    <link rel="stylesheet" href="nav/designvp.css">
 </head>
 
 <body>
@@ -32,14 +32,14 @@
     <a class="navbar-brand" href="">Adelita</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <i class="fa-solid fa-bars" style="color: #7b2ba0; font-size: 2em;"></i>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
         <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/home/lenny/Proyecto Historia 2 de marzo/index.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
             </li>
         </ul>
     </div>
@@ -55,7 +55,7 @@
             </div>
 
             <div class="col-lg-6">
-                <img id="title-img" src="/home/lenny/Proyecto Historia 2 de marzo/images/enfermera.png" alt="enfermera">
+                <img id="title-img" src="images/enfermera.png" alt="enfermera">
             </div>
 
         </div>
@@ -87,7 +87,7 @@
         
             <section id="cta">
         
-                <img class="img" src="/home/lenny/Proyecto Historia 2 de marzo/images/tren.png" alt="tren">
+                <img class="img" src="images/tren.png" alt="tren">
                 <br>
                 <div class="d-grid gap-2 col-6 mx-auto">
                     <a class="btn btn-primary" id="btn" href="https://youtu.be/LnYcdd8KBbw" target="_blank"
@@ -123,19 +123,19 @@
 
                 <div class="row justify-content-center">
                     <div class="polaroid col-lg-4">
-                        <img class="image-row" src="/home/lenny/Proyecto Historia 2 de marzo/images/Tamaulipas.jpeg"
+                        <img class="image-row" src="images/Tamaulipas.jpeg"
                             alt="Tamaulipas">
                         <h3>Tamaulipas</h3>
                     </div>
 
                     <div class="polaroid col-lg-4">
-                        <img class="image-row" src="/home/lenny/Proyecto Historia 2 de marzo/images/cdmx.jpeg"
+                        <img class="image-row" src="images/cdmx.jpeg"
                             alt="cdmx">
                         <h3>CDMX</h3>
                     </div>
 
                     <div class="polaroid col-lg-4">
-                        <img class="image-row" src="/home/lenny/Proyecto Historia 2 de marzo/images/coahuila.jpeg"
+                        <img class="image-row" src="images/coahuila.jpeg"
                             alt="Coahuila">
                         <h3>Coahuila</h3>
                     </div>
@@ -245,7 +245,7 @@
                 <h2>CULTURA Y SOCIAL</h2>
             </div>
             <div class="container center col-lg-6">
-                <img class="last-img" src="/home/lenny/Proyecto Historia 2 de marzo/images/mujer.png" alt="Mujer">
+                <img class="last-img" src="images/mujer.png" alt="Mujer">
             <div class="container col-lg-6">
                 <p class="cHI">En el código civil de 1884 existía una desigualdad expresa en cuanto a la moral de ambos sexos.
                     La esposa estaba obligada a vivir con el marido y a obedecerle  en todos los ámbitos de la vida conyugal: 
@@ -261,11 +261,11 @@
     <footer id="footer">
         <section id="press">
             <div>
-                <img class="press-logo" src="/home/lenny/Proyecto Historia 2 de marzo/images/instagram.png"
+                <img class="press-logo" src="images/instagram.png"
                     alt="instagram">
-                <img class="press-logo" src="/home/lenny/Proyecto Historia 2 de marzo/images/facebook.png"
+                <img class="press-logo" src="images/facebook.png"
                     alt="facebook">
-                <img class="press-logo" src="/home/lenny/Proyecto Historia 2 de marzo/images/unam.png" alt="UNAM">
+                <img class="press-logo" src="images/unam.png" alt="UNAM">
                 <p id="copyright">© Copyright Adelita</p>
             </div>
         </section>
