--- a/vp.html
+++ b/vp.html
@@ -21,7 +21,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="designvp.css">
+    <link rel="stylesheet" href="nav/designvp.css">
 </head>
 
 <body>
@@ -33,14 +33,14 @@
     <a class="navbar-brand" href="">Adelita</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <i class="fa-solid fa-bars" style="color: #7b2ba0; font-size: 2em;"></i>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
         <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/home/lenny/Proyecto Historia 2 de marzo/index.html">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
             </li>
         </ul>
     </div>
@@ -56,7 +56,7 @@
             </div>
 
             <div class="col-lg-6">
-                <img id="title-img" src="/home/lenny/Proyecto Historia 2 de marzo/images/mujer.png" alt="mujer">
+                <img id="title-img" src="images/mujer.png" alt="mujer">
             </div>
 
         </div>
@@ -123,17 +123,17 @@
         
         <div class="row justify-content-center" >
             <div class="polaroid col-lg-4">
-                <img class="image-row" src="/home/lenny/Proyecto Historia 2 de marzo/images/veracruz.jpeg" alt="Veracruz">
+                <img class="image-row" src="images/veracruz.jpeg" alt="Veracruz">
                 <h3>Veracruz</h3>
             </div>
 
             <div class="polaroid col-lg-4">
-                <img class="image-row" src="/home/lenny/Proyecto Historia 2 de marzo/images/zacatecas.jpeg" alt="Zacatecas">
+                <img class="image-row" src="images/zacatecas.jpeg" alt="Zacatecas">
                 <h3>Zacatecas</h3>
             </div>
             
             <div class="polaroid col-lg-4">
-                <img class="image-row" src="/home/lenny/Proyecto Historia 2 de marzo/images/oaxaca.jpeg" alt="Oaxaca">
+                <img class="image-row" src="images/oaxaca.jpeg" alt="Oaxaca">
                 <h3>Oaxaca</h3>
             </div>
         </div>
@@ -223,7 +223,7 @@
             <h2>CULTURA Y SOCIAL</h2>
         </div>
         <div class="container center col-lg-6">
-            <img class="last-img" src="/home/lenny/Proyecto Historia 2 de marzo/images/banco.png" alt="institución">
+            <img class="last-img" src="images/banco.png" alt="institución">
         </div>
         <div class="container col-lg-6">
             <p class="cHI">La mayoría de la población era analfabeta y rural. Tambíen se crearon varias instituciones humanitarias
@@ -239,9 +239,9 @@
     <footer id="footer">
         <section id="press">
             <div>
-            <img class="press-logo" src="/home/lenny/Proyecto Historia 2 de marzo/images/instagram.png" alt="instagram">
-            <img class="press-logo" src="/home/lenny/Proyecto Historia 2 de marzo/images/facebook.png" alt="facebook">
-            <img class="press-logo" src="/home/lenny/Proyecto Historia 2 de marzo/images/unam.png" alt="UNAM">
+            <img class="press-logo" src="images/instagram.png" alt="instagram">
+            <img class="press-logo" src="images/facebook.png" alt="facebook">
+            <img class="press-logo" src="images/unam.png" alt="UNAM">
             <p id="copyright">© Copyright Adelita</p>
             </div>
         </section>
